# ledger-ball

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  ledger.rs  main.rs  parser.rs
src/components/: FloatingBall.vue  InputPanel.vue  SettingsPanel.vue  StatsPanel.vue
