[package]
name = "ledger-ball"
version = "0.1.0"
description = "轻量级记账助手桌面应用"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
csv = "1.3"
dirs = "5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true